[package]
name = "zip_utils"
version = "0.1.0"
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2018"

[features]
vendored = ["openssl/vendored"]

[dependencies]
base64 = "0.12"
zip = { git = "ssh://git@git.kaiostech.com/rust-forks/zip-rs.git", default-features = false, features = ["deflate"]}
ring = { git = "https://github.com/kaiostech/ring.git", branch = "gonk-0.16.12" }
untrusted = "0.7"
simple_asn1 = "0.4"
openssl = "0.10"